# shop

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
app/: main.py
app/core/: config.py  hashing.py  security.py
app/db/: base.py  base_class.py  database.py
app/db/CRUD/: categories.py  products.py  users.py
app/db/models/: categories.py  products.py  users.py
app/routers/: base.py  categories.py  login.py  products.py  users.py
app/schemas/: categories.py  products.py  users.py
app/static/css/: card.css  navbar.css  style.css
app/templates/: homepage.html
app/templates/auth/: login.html
app/templates/components/: card.html  navbar.html
app/web/: base.py  home.py
app/web/auth/: route_login.py
