[tool.poetry]
name = "shop"
version = "0.1.0"
description = "template for any shop"
authors = ["samolin <samolin.vlad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
python-dotenv = "^0.21.0"
sqlalchemy = "^1.4.43"
psycopg2 = "^2.9.5"
sqlalchemy-utils = "^0.38.3"
pre-commit = "^2.20.0"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
experimental-string-processing = true
