[tool.poetry]
name = "shop"
version = "0.1.0"
description = "template for any shop"
authors = ["samolin <samolin.vlad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
python-dotenv = "^0.21.0"
sqlalchemy = "^1.4.43"
psycopg2 = "^2.9.5"
sqlalchemy-utils = "^0.38.3"
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
autoflake = "^1.7.7"
email-validator = "^1.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.autoflake]
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-unused-variables = true
in-place = true
recursive = true
exclude = "./app/db/base.py"


[tool.isort]
profile = "black"
line_length = 79


[tool.black]
line-length = 79
experimental-string-processing = true
